refactored icon img to be a background image - z-index was causing issues with the ellipsis being clickable

--- a/src/Dashboard/DashboardItems/DashboardItem/DashboardItem.css
+++ b/src/Dashboard/DashboardItems/DashboardItem/DashboardItem.css
@@ -1,11 +1,12 @@
 .Dashboard-item
 {
-    /* background-color: orange; */
-    /*   padding: 1em; */
+    isolation: isolate;
     padding-top: 2.5em;
     position: relative;
-    z-index: -2;
     overflow: hidden;
+    background-repeat: no-repeat;
+    background-position-x: 85%;
+    background-size: 64px;
 }
 
 .Dashboard-item-title
@@ -32,7 +33,7 @@
     position: absolute;
     top: 0%;
     left: 70%;
-    z-index: -1;
+    z-index: 0;
     width: 64px;
 }
 
